--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.2.1",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
